fix: change the the name of variable group

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -113,7 +113,7 @@ stages:
       vmImage: 'ubuntu-18.04'
     environment: test
     variables:
-    - group: 'Release'
+    - group: 'Release variable group 25-11-2020'
     strategy:
       runOnce:
         deploy:
